[IndexedDB]: Modify RecordCorruptionInfo to use ImportantFileWriter

As per crbug640232, RecordCorruptionInfo's method of writing a
corruption report to a file is modified from making a file and then
writing to it to writing it atomically using ImportantFileWriter's
WriteFileAtomically method to avoid issues involving interruption of
the file write between file creation and actual writing of the record.

Bug: 640232
Change-Id: I69aad54da0c341528dbcf46ebf5a2b08cc3270f6
Reviewed-on: https://chromium-review.googlesource.com/c/1419261
Reviewed-by: Daniel Murphy <dmurph@chromium.org>
Commit-Queue: Andreas Butler <andreasbutler@google.com>
Cr-Commit-Position: refs/heads/master@{#625431}
Former-commit-id: 342698dc84f1e3f19abad8efcc2fe379a1208f3c